# nexus-cli

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/rules/: architecture.md  coding.md  testing.md
.github/workflows/: ci.yml
confhub/: __init__.py  cli.py
confhub/commands/: agent.py  app.py  init.py  install.py  link.py  resolve.py  status.py  submodule.py  sync.py
confhub/core/: agents.py  linker.py  merger.py  registry.py
confhub/utils/: console.py  git.py
nexus/: cli.py
nexus/commands/: agent.py  app.py  init.py  status.py  submodule.py
nexus/utils/: console.py
tests/: test_agent.py  test_app.py  test_git.py  test_init.py  test_linker.py  test_merger.py  test_registry.py  test_resolve_cmd.py  test_sync.py
