[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus-cli"
version = "0.1.0"
description = "AI 에이전트 설정 중앙 관리 CLI 프레임워크"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "gitpython>=3.1.0",
    "jinja2>=3.1.0",
]

[project.scripts]
nxs = "nexus.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pre-commit>=3.0",
    "ruff>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["nexus"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["nexus"]
omit = ["tests/*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["nexus"]
